--- a/BlissRecruitmentApp/BRAVoteViewController.xib
+++ b/BlissRecruitmentApp/BRAVoteViewController.xib
@@ -9,37 +9,59 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BRAVoteViewController" customModule="BlissRecruitmentApp" customModuleProvider="target">
-            <connections>
-                <outlet property="progressBar" destination="DWF-ZJ-4ag" id="1gx-4h-0XQ"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="voteButton" destination="eCz-qv-3EG" id="28k-zK-Zh2"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+        <view clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="center" id="i5M-Pr-FkT" customClass="BRAChoiceView" customModule="BlissRecruitmentApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="DWF-ZJ-4ag">
-                    <rect key="frame" x="8" y="20" width="240" height="2"/>
+                    <rect key="frame" x="20" y="24" width="172" height="2"/>
                 </progressView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eCz-qv-3EG">
-                    <rect key="frame" x="256" y="4.5" width="56" height="33"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eCz-qv-3EG">
+                    <rect key="frame" x="200" y="1" width="120" height="48"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="48" id="C2s-el-QTq"/>
+                        <constraint firstAttribute="width" constant="120" id="Xkr-Fv-jML"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" weight="black" pointSize="17"/>
-                    <state key="normal" title="Vote"/>
+                    <state key="normal" title="Vote">
+                        <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <state key="disabled">
+                        <color key="titleColor" red="0.60392156860000001" green="0.60392156860000001" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <state key="selected">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="666" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vhy-fr-qAB">
+                    <rect key="frame" x="12" y="2.5" width="188" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="eCz-qv-3EG" firstAttribute="centerY" secondItem="DWF-ZJ-4ag" secondAttribute="centerY" id="Hv5-qn-P3L"/>
+                <constraint firstItem="DWF-ZJ-4ag" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="9iZ-jT-58B"/>
+                <constraint firstItem="DWF-ZJ-4ag" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="H99-8p-PoC"/>
+                <constraint firstItem="Vhy-fr-qAB" firstAttribute="centerX" secondItem="DWF-ZJ-4ag" secondAttribute="centerX" id="IRX-V6-x0O"/>
                 <constraint firstItem="eCz-qv-3EG" firstAttribute="leading" secondItem="DWF-ZJ-4ag" secondAttribute="trailing" constant="8" id="Jl7-Et-0S9"/>
-                <constraint firstItem="DWF-ZJ-4ag" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="3:4" id="Phv-sg-51W"/>
-                <constraint firstAttribute="trailing" secondItem="eCz-qv-3EG" secondAttribute="trailing" constant="8" id="QdG-tW-wn3"/>
-                <constraint firstItem="DWF-ZJ-4ag" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" multiplier="4:5" id="p3R-Uc-kfH"/>
-                <constraint firstItem="DWF-ZJ-4ag" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="pI2-8i-NHC"/>
+                <constraint firstAttribute="trailing" secondItem="eCz-qv-3EG" secondAttribute="trailing" id="QdG-tW-wn3"/>
+                <constraint firstItem="Vhy-fr-qAB" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" multiplier="1/2" id="bDk-h9-Frt"/>
+                <constraint firstItem="eCz-qv-3EG" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="ric-Jh-ihh"/>
+                <constraint firstItem="Vhy-fr-qAB" firstAttribute="trailing" secondItem="eCz-qv-3EG" secondAttribute="leading" id="zrb-5a-Xg8"/>
             </constraints>
-            <point key="canvasLocation" x="21" y="285"/>
+            <nil key="simulatedStatusBarMetrics"/>
+            <nil key="simulatedTopBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="choiceProgress" destination="DWF-ZJ-4ag" id="K1F-Bi-U7O"/>
+                <outlet property="choiceVoteButton" destination="eCz-qv-3EG" id="wRh-Es-esv"/>
+                <outlet property="voteCountLabel" destination="Vhy-fr-qAB" id="0vA-ac-ETg"/>
+            </connections>
+            <point key="canvasLocation" x="-4329" y="285"/>
         </view>
     </objects>
 </document>
