--- a/BlissRecruitmentApp/Base.lproj/Main.storyboard
+++ b/BlissRecruitmentApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="H1p-Uh-vWS">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -36,32 +36,32 @@
                         <viewControllerLayoutGuide type="bottom" id="GAO-Cl-Wes"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="svH-Pt-448">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JgH-uX-ccf">
-                                <rect key="frame" x="0.0" y="64" width="328" height="504"/>
+                                <rect key="frame" x="0.0" y="64" width="328" height="416"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XIG-vd-9NH" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="-64" width="328" height="632"/>
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XIG-vd-9NH" userLabel="ContentView">
+                                        <rect key="frame" x="0.0" y="-64" width="320" height="800"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P9Z-Vt-ugd">
-                                                <rect key="frame" x="20" y="66" width="288" height="144"/>
+                                                <rect key="frame" x="20" y="66" width="280" height="140"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="P9Z-Vt-ugd" secondAttribute="height" multiplier="2:1" id="hOS-Dx-JVZ"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publication date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bkd-dC-pAj">
-                                                <rect key="frame" x="20" y="218" width="288" height="24"/>
+                                                <rect key="frame" x="20" y="214" width="280" height="16"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="24" id="xRP-eH-W9N"/>
+                                                    <constraint firstAttribute="height" constant="16" id="xRP-eH-W9N"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Detail view content goes here and can be very long" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0XM-y9-sOw">
-                                                <rect key="frame" x="20" y="8" width="288" height="50"/>
+                                                <rect key="frame" x="20" y="8" width="280" height="50"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="Wmf-fN-WVk"/>
@@ -70,11 +70,10 @@
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pmj-zJ-ELL">
-                                                <rect key="frame" x="20" y="250" width="288" height="350"/>
-                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <view clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pmj-zJ-ELL">
+                                                <rect key="frame" x="20" y="238" width="280" height="92"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="350" id="Ixv-54-2Av"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="aBh-jv-HiR"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -97,11 +96,11 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="XIG-vd-9NH" firstAttribute="leading" secondItem="JgH-uX-ccf" secondAttribute="leading" id="2KB-Rw-sDN"/>
-                                    <constraint firstItem="XIG-vd-9NH" firstAttribute="centerX" secondItem="JgH-uX-ccf" secondAttribute="centerX" id="CaH-qH-ZjP"/>
-                                    <constraint firstAttribute="bottom" secondItem="XIG-vd-9NH" secondAttribute="bottom" id="MeJ-vv-QMQ"/>
-                                    <constraint firstItem="XIG-vd-9NH" firstAttribute="centerY" secondItem="JgH-uX-ccf" secondAttribute="centerY" id="O7p-a9-Rd1"/>
+                                    <constraint firstItem="XIG-vd-9NH" firstAttribute="centerX" secondItem="JgH-uX-ccf" secondAttribute="centerX" constant="-4" id="CaH-qH-ZjP"/>
+                                    <constraint firstAttribute="bottom" secondItem="XIG-vd-9NH" secondAttribute="bottom" constant="-192" id="MeJ-vv-QMQ"/>
+                                    <constraint firstItem="XIG-vd-9NH" firstAttribute="centerY" secondItem="JgH-uX-ccf" secondAttribute="centerY" constant="128" id="O7p-a9-Rd1"/>
                                     <constraint firstItem="XIG-vd-9NH" firstAttribute="top" secondItem="JgH-uX-ccf" secondAttribute="top" constant="-64" id="XDN-im-6pc"/>
-                                    <constraint firstAttribute="trailing" secondItem="XIG-vd-9NH" secondAttribute="trailing" id="lPp-UY-dfE"/>
+                                    <constraint firstAttribute="trailing" secondItem="XIG-vd-9NH" secondAttribute="trailing" constant="8" id="lPp-UY-dfE"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
@@ -114,17 +113,23 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
+                    <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM">
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="Dlv-tA-Xq6">
+                            <connections>
+                                <segue destination="xWm-Xk-2ae" kind="show" identifier="shareQuestionSegue" id="8rv-ec-Vu7"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="detailQuestionImage" destination="P9Z-Vt-ugd" id="Gc7-0q-ZYa"/>
                         <outlet property="detailQuestionLabel" destination="0XM-y9-sOw" id="hHE-5n-4DE"/>
                         <outlet property="detailQuestionPublicationLabel" destination="bkd-dC-pAj" id="IET-Wa-5ps"/>
-                        <outlet property="votingView" destination="Pmj-zJ-ELL" id="j5y-2u-E49"/>
+                        <outlet property="votingView" destination="Pmj-zJ-ELL" id="B5I-3o-PHI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="706.875" y="127.8169014084507"/>
+            <point key="canvasLocation" x="706.875" y="127.5"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="Nki-YV-4Qg">
@@ -149,11 +154,11 @@
                         <viewControllerLayoutGuide type="bottom" id="EQ1-ws-jCO"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="5f6-Uz-CZE">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYp-K4-gqK">
-                                <rect key="frame" x="0.0" y="75.5" width="320" height="38.5"/>
+                                <rect key="frame" x="0.0" y="61" width="320" height="38.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -176,7 +181,7 @@
             <objects>
                 <tableViewController title="Master" clearsSelectionOnViewWillAppear="NO" id="7bK-jq-Zjz" customClass="MasterViewController" customModule="BlissRecruitmentApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="r7i-6Z-zg0">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
@@ -211,6 +216,7 @@
                     <navigationItem key="navigationItem" title="Questions" id="Zdf-7t-Un8"/>
                     <connections>
                         <segue destination="S1h-Id-SOB" kind="showDetail" identifier="segueLoadingScreen" animates="NO" id="Zai-8a-9wP"/>
+                        <segue destination="xWm-Xk-2ae" kind="show" identifier="shareFilterSegue" id="KYr-4d-KZe"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
@@ -236,5 +242,6 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="6S0-TO-JiA"/>
+        <segue reference="8rv-ec-Vu7"/>
     </inferredMetricsTieBreakers>
 </document>
